--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,13 @@ android {
 
         instrumentTest.setRoot('tests')
     }
+    buildTypes {
+        release {
+            minifyEnabled true
+            shrinkResources true
+           
+        }
+    }
 }
 
 
